--- a/index.html
+++ b/index.html
@@ -77,6 +77,13 @@
           </a>
         </div>
       </div>
+      <div class="box">
+        <div class="mask">
+          <a href="/lending_library">
+          library
+          </a>
+        </div>
+      </div>
     </div>
   </div>
 
