--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
       </div>
       <div class="box">
         <div class="mask">
-          <a href="/lending_library">
+          <a href="library/lending_library.html">
           library
           </a>
         </div>
