get php working

--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
           </a>
         </div>
       </div>
+
       <div class="box">
         <div class="mask">
           <a href="library/lending_library.html">
@@ -84,6 +85,16 @@
           </a>
         </div>
       </div>
+
+      div class="box">
+        <div class="mask">
+          <a href="info.php">
+          library
+          </a>
+        </div>
+      </div>
+
+
     </div>
   </div>
 
