--- a/index.html
+++ b/index.html
@@ -86,10 +86,10 @@
         </div>
       </div>
 
-      div class="box">
+      <div class="box">
         <div class="mask">
           <a href="info.php">
-          library
+          php
           </a>
         </div>
       </div>
