--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 
       <div class="box">
         <div class="mask">
-          <a href="library/lending_library.html">
+          <a href="library/lending_library.php">
           library
           </a>
         </div>
