--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <title>FREEWATERHOUSE</title>
+  <link rel="stylesheet" href="index_style.css">
 </head>
 <body>
   <a href="https://en.wikipedia.org/wiki/Aperiodic_tiling">
@@ -9,95 +10,16 @@
       <img class="logo" href="https://en.wikipedia.org/wiki/Aperiodic_tiling" src="images/penrose.png" alt="Penrose pattern">
     </div>
   </a>
-
-  <style>
-    .header_container {
-      display: flex;
-      justify-content: space-between;
-      margin: 20px 20px 60px 20px;
-      font-size: 40px;
-      flex-direction: column;
-    }
-
-    .logo {
-      width: 150px;
-      height: 150px;
-      margin: 10px;
-    }
-
-    .bottom_image {
-      width: 250px;
-      height: 250px;
-      margin: 5px;
-    }
-
-    .bottom_image_wrapper {
-      display: flex;
-      font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      margin-bottom: 30px;
-    }
   
-    .logo_wrapper {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-    }
-    .box_wrapper {
-      margin: 20px 20px;
-      text-align: center;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      gap: 20px;
-    }
-
-    .box {
-      width: 200px; /* Set fixed width for each "box" item */
-      height: 50px;
-      margin: 10px;
-      font-size: 34px;
-      text-align: center;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      position: relative;
-    }
-
-  
-  </style>
-    <div class="box_wrapper">
-      <div class="box">
-        <div class="mask">
-          <a href="/ttt">
-          TTT
-          </a>
-        </div>
-      </div>
-
-      <div class="box">
-        <div class="mask">
-          <a href="/library/lending_library.php">
-          library
-          </a>
-        </div>
-      </div>
-
-      <div class="box">
-        <div class="mask">
-          <a href="info.php">
-          php
-          </a>
-        </div>
-      </div>
-
-
-    </div>
+  <div id="links_area">
+    <a href="/ttt">
+      TTT
+    </a>
+    <a href="/library/lending_library.php">
+      library
+    </a>
   </div>
-
+        
 
   <div class="bottom_image_wrapper">
     <p>FREEWATERHOUSE</p>
