--- a/index.html
+++ b/index.html
@@ -22,16 +22,16 @@
     </a>
   </div>
 
-  <div id="bottom_image_wrapper">
-    <img id="bottom_image" src="images/fwh_pro_pic.png" alt="profile pic">
+  <div id="bottom">
+    <div id="bottom_image_wrapper">
+      <img id="bottom_image" src="images/fwh_pro_pic.png" alt="profile pic">
+    </div>
+
+    <div class="footer">
+      <p>FREEWATERHOUSE</p>
+    </div>
   </div>
-
-  <div class="footer">
-    <p>FREEWATERHOUSE</p>
-  </div>
-
-
-        
+     
 </body>
 
 </html>
