--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
 
   <div id="links_area">
     <a href="/ttt">
-      TTT❌⭕
+      TTT
     </a>
     <a href="/library/lending_library.php">
-      LIBRARY📚
+      LIBRARY
     </a>
   </div>
 
