--- a/index.html
+++ b/index.html
@@ -17,8 +17,13 @@
     <a href="/ttt">
       TTT
     </a>
+
     <a href="/library/lending_library.php">
       LIBRARY
+    </a>
+
+    <a href="https://www.foddy.net/Athletics.html">
+      QWOP
     </a>
   </div>
 
