--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       LIBRARY
     </a>
 
-    <a href="https://www.foddy.net/Athletics.html">
+    <a href="https://poki.com/en/g/qwop">
       QWOP
     </a>
   </div>
