trying to adjust scale

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <title>FREEWATERHOUSE</title>
   <link rel="stylesheet" href="index_style.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
   <a href="https://en.wikipedia.org/wiki/Aperiodic_tiling">
