try to fix routing issue

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       QWOP
     </a>
 
-    <a href="/collage">
+    <a href="https://freewaterhouse.com/collage/">
       COLLAGE (IN PROGRESS)
     </a>
   </div>
