try to fix routing issue

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       QWOP
     </a>
 
-    <a href="https://freewaterhouse.com/collage/">
+    <a href="/collage/public/index.html">
       COLLAGE (IN PROGRESS)
     </a>
   </div>
