--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       QWOP
     </a>
 
-    <a href="/collage/public/index.html">
+    <a href="/collage">
       COLLAGE (IN PROGRESS)
     </a>
   </div>
