--- a/index.html
+++ b/index.html
@@ -30,6 +30,10 @@
     <a href="/collage">
       COLLAGE (IN PROGRESS)
     </a>
+
+    <a href="/dummy_node">
+      DUMMY NODE
+    </a>
   </div>
 
   <div id="bottom">
