update collage server

--- a/collage/public/index.html
+++ b/collage/public/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>WebSocket Image</title>
-    <link rel="stylesheet" href="body_lang_stylesheet.css">
+    <link rel="stylesheet" href="collage/body_lang_stylesheet.css">
 </head>
 <body>
     <h1>Body Language</h1>
@@ -10,7 +10,7 @@
         <img id="basketball" src="https://upload.wikimedia.org/wikipedia/commons/7/7a/Basketball.png" draggable="true">
         <img id="beer" src="https://oldschool.runescape.wiki/images/thumb/Beer_detail.png/1200px-Beer_detail.png?b3760" draggable="true">
     </div>
-    <script src="image_logic.js"></script>
+    <script src="collage/image_logic.js"></script>
  
 </body>
 </html>
