--- a/collage/public/index.html
+++ b/collage/public/index.html
@@ -11,6 +11,8 @@
         <img id="beer" src="https://oldschool.runescape.wiki/images/thumb/Beer_detail.png/1200px-Beer_detail.png?b3760" draggable="true">
     </div>
     <script src="collage/image_logic.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/interactjs@1.10.11/dist/interact.min.js"></script>
+
  
 </body>
 </html>
