fleshing out dummy page

--- a/dummy_node/public/dummy.html
+++ b/dummy_node/public/dummy.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Dummy Page</title>
+    <title>WebSocket Image</title>
 </head>
 <body>
-  <h1>Welcome to the Dummy Page!</h1>
-  <p>This is a simple dummy page.</p>
+    <h1>Body Language</h1>
+    <div id="imageArea">
+        <img id="basketball" src="https://upload.wikimedia.org/wikipedia/commons/7/7a/Basketball.png" draggable="true">
+    </div> 
+    <script src="collage/dummy_image_logic.js"></script>
 </body>
 </html>
