fleshing out dummy page

--- a/dummy_node/public/dummy.html
+++ b/dummy_node/public/dummy.html
@@ -4,10 +4,10 @@
     <title>WebSocket Image</title>
 </head>
 <body>
-    <h1>Body Language</h1>
+    <h1>Dummy Page Time!</h1>
     <div id="imageArea">
         <img id="basketball" src="https://upload.wikimedia.org/wikipedia/commons/7/7a/Basketball.png" draggable="true">
     </div> 
-    <script src="collage/dummy_image_logic.js"></script>
+    <script src="dummy_node/dummy_image_logic.js"></script>
 </body>
 </html>
