fleshing out dummy page

--- a/dummy_node/public/dummy.html
+++ b/dummy_node/public/dummy.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>WebSocket Image</title>
+    <title>WebSocket Image Dummy</title>
 </head>
 <body>
     <h1>Dummy Page Time!</h1>
