--- a/dummy_node/public/dummy.html
+++ b/dummy_node/public/dummy.html
@@ -2,6 +2,9 @@
 <html>
 <head>
     <title>WebSocket Image Dummy</title>
+    <link rel="stylesheet" href="dummy_node/dummy_style.css">
+    <script src="https://cdn.jsdelivr.net/npm/interactjs@1.10.11/dist/interact.min.js"></script>
+
 </head>
 <body>
     <h1>Dummy Page Time!</h1>
