--- a/dummy_node/public/dummy.html
+++ b/dummy_node/public/dummy.html
@@ -10,6 +10,8 @@
     <h1>Dummy Page Time!</h1>
     <div id="imageArea">
         <img id="basketball" src="https://upload.wikimedia.org/wikipedia/commons/7/7a/Basketball.png" draggable="true">
+        <img id="beer" src="https://oldschool.runescape.wiki/images/thumb/Beer_detail.png/1200px-Beer_detail.png?b3760" draggable="true">
+
     </div> 
     <script src="dummy_node/dummy_image_logic.js"></script>
 </body>
