--- a/collage/public/index.html
+++ b/collage/public/index.html
@@ -3,6 +3,7 @@
 <head>
     <title>WebSocket Image</title>
     <link rel="stylesheet" href="collage/body_lang_stylesheet.css">
+    <script src="https://cdn.jsdelivr.net/npm/interactjs@1.10.11/dist/interact.min.js"></script>
 
 </head>
 <body>
