--- a/collage/public/index.html
+++ b/collage/public/index.html
@@ -9,8 +9,8 @@
 <body>
     <h1>Body Language</h1>
     <div id="imageArea">
-        <img id="basketball" src="https://upload.wikimedia.org/wikipedia/commons/7/7a/Basketball.png" draggable="true">
-        <img id="beer" src="https://oldschool.runescape.wiki/images/thumb/Beer_detail.png/1200px-Beer_detail.png?b3760" draggable="true">
+        <!-- <img id="basketball" src="https://upload.wikimedia.org/wikipedia/commons/7/7a/Basketball.png" draggable="true">
+        <img id="beer" src="https://oldschool.runescape.wiki/images/thumb/Beer_detail.png/1200px-Beer_detail.png?b3760" draggable="true"> -->
     </div>
     <script src="collage/image_logic.js"></script>
  
