--- a/collage/public/index.html
+++ b/collage/public/index.html
@@ -10,6 +10,9 @@
     <h1>Body Language</h1>
     <div id="imageArea">
     </div>
+    <div>
+        
+    </div>
     <script src="collage/image_logic.js"></script>
  
 </body>
