--- a/collage/public/index.html
+++ b/collage/public/index.html
@@ -8,11 +8,15 @@
 </head>
 <body>
     <h1>Body Language</h1>
+    <div id="uploadSection">
+        <label for="imageInput">Add Image:</label>
+        <input type="file" id="imageInput" accept="image/*">
+        <button id="uploadButton" disabled>Upload</button>
+        <progress id="uploadProgress" value="0" max="100"></progress>
+    </div>
     <div id="imageArea">
     </div>
-    <div>
-        
-    </div>
+    <script src="collage/upload_logic.js"></script>
     <script src="collage/image_logic.js"></script>
  
 </body>
