--- a/collage/public/index.html
+++ b/collage/public/index.html
@@ -14,6 +14,13 @@
         <button id="uploadButton" disabled>Upload</button>
         <progress id="uploadProgress" value="0" max="100"></progress>
     </div>
+    <div id="deleteSection">
+        <span>Delete Image: </span>
+        <button id="deleteButton" disabled>Delete</button>
+        <span style="opacity: 0.5;">Are you sure?</span>
+        <button id="confirmDelete" disabled>Yes</button>
+        <button id="cancelDelete" disabled>No</button>
+    </div>
     <div id="imageArea">
     </div>
     <script src="collage/upload_logic.js"></script>
