--- a/collage/public/index.html
+++ b/collage/public/index.html
@@ -9,17 +9,29 @@
 <body>
     <h1>Body Language</h1>
     <div id="uploadSection">
-        <label for="imageInput">Add Image:</label>
-        <input type="file" id="imageInput" accept="image/*">
-        <button id="uploadButton" disabled>Upload</button>
-        <progress id="uploadProgress" value="0" max="100"></progress>
+        <div>
+            <label for="imageInput">Add Image:</label>
+            <input type="file" id="imageInput" accept="image/*">
+        </div>
+        <div>
+            <button id="uploadButton" disabled>Upload</button>
+        </div>
+        <div>
+            <progress id="uploadProgress" value="0" max="100"></progress>
+        </div>
     </div>
     <div id="deleteSection">
-        <span>Delete Image: </span>
-        <button id="deleteButton" disabled>Delete</button>
-        <span style="opacity: 0.5;">Are you sure?</span>
-        <button id="confirmDelete" disabled>Yes</button>
-        <button id="cancelDelete" disabled>No</button>
+        <div>
+            <span>Delete Image: </span>
+            <button id="deleteButton" disabled>Delete</button>
+        </div>
+        <div style="opacity: 0.5;">
+            <span>Are you sure?</span>
+        </div>
+        <div>
+            <button id="confirmDelete" disabled>Yes</button>
+            <button id="cancelDelete" disabled>No</button>
+        </div>
     </div>
     <div id="imageArea">
     </div>
