add bottom padding

--- a/collage/public/index.html
+++ b/collage/public/index.html
@@ -24,6 +24,10 @@
     </div>
     <div id="imageArea">
     </div>
+
+    <div id="bottomPadding"></div>
+
+
     <script src="collage/upload_logic.js"></script>
     <script src="collage/image_logic.js"></script>
  
