z index for loading and new images

--- a/collage/public/index.html
+++ b/collage/public/index.html
@@ -22,6 +22,11 @@
         <button id="confirmDelete" class="buttonCheck" disabled>Yes</button>
         <button id="cancelDelete" class="buttonCheck" disabled>No</button>
     </div>
+    <div id="zIndexControlSection">
+        <span>Control Image Layer: </span>
+        <button id="sendToFrontButton" class="buttonCheck" disabled>Send to front</button>
+        <button id="sendToBackButton" class="buttonCheck" disabled>Send to back</button>
+    </div>
     <div id="imageArea">
     </div>
 
