z index for loading and new images

--- a/collage/public/index.html
+++ b/collage/public/index.html
@@ -23,7 +23,7 @@
         <button id="cancelDelete" class="buttonCheck" disabled>No</button>
     </div>
     <div id="zIndexControlSection">
-        <span>Move Image to Front or Back: </span>
+        <span id="zIndexText">Move Image to Front or Back: </span>
         <button id="sendToFrontButton" class="buttonCheck" disabled>Send to front</button>
         <button id="sendToBackButton" class="buttonCheck" disabled>Send to back</button>
     </div>
