add delete all button and functionality

--- a/collage/public/index.html
+++ b/collage/public/index.html
@@ -29,6 +29,13 @@
     </div>
     <div id="imageArea">
     </div>
+    <div id="deleteAllSection">
+        <span>Delete All Images: </span>
+        <button id="deleteAllButton" class="buttonCheck">Delete All</button>
+        <span id="confirmAllText" style="opacity: 0.3;">Are you sure?</span>
+        <button id="confirmDeleteAll" class="buttonCheck" disabled>Yes</button>
+        <button id="cancelDeleteAll" class="buttonCheck" disabled>No</button>
+    </div>
 
     <div id="bottomPadding"></div>
 
