add delete all button and functionality

--- a/collage/public/index.html
+++ b/collage/public/index.html
@@ -30,11 +30,11 @@
     <div id="imageArea">
     </div>
     <div id="deleteAllSection">
-        <span>Delete All Images: </span>
+        <span>Delete ALL Images: </span>
         <button id="deleteAllButton" class="buttonCheck">Delete All</button>
-        <span id="confirmAllText" style="opacity: 0.3;">Are you sure?</span>
-        <button id="confirmDeleteAll" class="buttonCheck" disabled>Yes</button>
-        <button id="cancelDeleteAll" class="buttonCheck" disabled>No</button>
+        <span id="confirmDeleteAllText" style="opacity: 0.3;">Are you sure?</span>
+        <button id="confirmDeleteAllButton" class="buttonCheck" disabled>Yes</button>
+        <button id="cancelDeleteAllButton" class="buttonCheck" disabled>No</button>
     </div>
 
     <div id="bottomPadding"></div>
