--- a/collage/public/index.html
+++ b/collage/public/index.html
@@ -5,6 +5,8 @@
     <link rel="stylesheet" href="collage/body_lang_stylesheet.css">
     <script src="https://cdn.jsdelivr.net/npm/interactjs@1.10.11/dist/interact.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/uuid/8.3.2/uuidv4.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/0.5.0-beta4/html2canvas.min.js"></script>
+
 
 </head>
 <body>
@@ -35,6 +37,9 @@
         <span id="confirmDeleteAllText" style="opacity: 0.3;">Are you sure?</span>
         <button id="confirmDeleteAllButton" class="buttonCheck" disabled>Yes</button>
         <button id="cancelDeleteAllButton" class="buttonCheck" disabled>No</button>
+    </div>
+    <div id="downloadScreenshotSection">
+        <button id="downloadScreenshotButton" class="buttonCheck">Save A Screenshot</button>
     </div>
 
     <div id="bottomPadding"></div>
