--- a/collage/public/index.html
+++ b/collage/public/index.html
@@ -39,6 +39,7 @@
         <button id="cancelDeleteAllButton" class="buttonCheck" disabled>No</button>
     </div>
     <div id="downloadScreenshotSection">
+        <span>Save A Screenshot: </span>
         <button id="downloadScreenshotButton" class="buttonCheck">Save A Screenshot</button>
     </div>
 
