add screenshot text

--- a/collage/public/index.html
+++ b/collage/public/index.html
@@ -39,8 +39,8 @@
         <button id="cancelDeleteAllButton" class="buttonCheck" disabled>No</button>
     </div>
     <div id="downloadScreenshotSection">
-        <span>Save A Screenshot: </span>
-        <button id="downloadScreenshotButton" class="buttonCheck">Save A Screenshot</button>
+        <span>Download a Screenshot: </span>
+        <button id="downloadScreenshotButton" class="buttonCheck">Download Screenshot</button>
     </div>
 
     <div id="bottomPadding"></div>
