add close socket button

--- a/collage/public/index.html
+++ b/collage/public/index.html
@@ -42,6 +42,9 @@
         <span>Download a Screenshot: </span>
         <button id="downloadScreenshotButton" class="buttonCheck">Download Screenshot</button>
     </div>
+    <div id="webSocketButtonSection">
+        <button id="webSocketButton">Close WebSocket</button>
+    </div>
 
     <div id="bottomPadding"></div>
 
