add disconnect modal

--- a/collage/public/index.html
+++ b/collage/public/index.html
@@ -48,6 +48,14 @@
 
     <div id="bottomPadding"></div>
 
+    <div id="disconnectModal" class="modal">
+        <div class="modal-content">
+            <span class="close-btn">&times;</span>
+            <p>WebSocket connection has closed. Please refresh to reconnect.</p>
+            <button onclick="location.reload();">Refresh</button>
+        </div>
+    </div>
+
 
     <script src="collage/upload_logic.js"></script>
     <script src="collage/image_logic.js"></script>
