keep track of number of connected users

--- a/collage/public/index.html
+++ b/collage/public/index.html
@@ -42,6 +42,9 @@
         <span>Download a Screenshot: </span>
         <button id="downloadScreenshotButton" class="buttonCheck">Download Screenshot</button>
     </div>
+    <div id="currentlyConnectedUsersSection">
+        <span id="currentlyConnectedUsersText">Currently connected users: </span>
+    </div>
 
     <div id="bottomPadding"></div>
 
