--- a/collage/public/index.html
+++ b/collage/public/index.html
@@ -11,6 +11,22 @@
 </head>
 <body>
     <h1>Body Language</h1>
+    
+    <a href="#" id="toggleButton">About⬇</a>
+    <div id="more">
+        Like a <a href="https://littlefreelibrary.org/">Little Free Library</a>, but on the internet! 
+        Leave a song, poem, drawing, pdf, movie, zip file, whatever! Check out what other people have left, 
+        but remember, if you download the file, it will be removed from the box, just like in real life.
+        <br> 
+        <br>
+        If you want to chat about community-activated public art, please email me at <span id="email"></span>.
+        <br>
+        <br>
+        <a href="https://ko-fi.com/goodbyeoblivion">Buy me a coffee</a>
+        <br>
+        <a href="https://www.instagram.com/ndrewboylan/">Instagram</a>
+    </div>
+
     <div id="uploadSection">
         <label for="imageInput">Add Image:</label>
         <input type="file" id="imageInput" class="buttonCheck" accept="image/*">
