--- a/collage/public/index.html
+++ b/collage/public/index.html
@@ -49,7 +49,17 @@
 
     <a href="#" id="toggleButton">About / How To ⬇</a>
     <div id="more">
-        Yo yo yo 
+WELCOME
+Welcome to Body Language, a collaborative collage. You can add, move, and resize images, and you'll also see the interactions of other users in real-time. 
+
+ADDING IMAGES
+When adding an image, choose a file, then remember to press the upload button to add the image to the canvas. Added images will always appear in the upper left corner of the canvas. 
+
+TIP FOR FINDING IMAGES WITH TRANSPARENT BACKGROUNDS
+It's nice to add images with a transparent background. You can google "{image you want} transparent png" and find some results. Sometimes though, you'll just get an image with a white or checkered background. However, if you're on iPhone on the latest version, in your Photos app, you can press and hold on an image which will automatically separate it from its background, then press "Share", then press "Save Image" to save the image with a transparent background. Nice!  
+
+WEEKLY CLEANUP
+Every week, on Sunday at 12am we do cleanup: a screenshot of the current state of the collage is saved, and all images are removed.
     </div>
 
     <div id="bottomPadding"></div>
