--- a/collage/public/index.html
+++ b/collage/public/index.html
@@ -10,7 +10,7 @@
 
 </head>
 <body>
-    <h1>Body Language</h1>
+    <h1>Body Language, a collaborative collage</h1>
 
     <div id="uploadSection">
         <label for="imageInput">Add Image:</label>
