how to for download screenshot

--- a/collage/public/index.html
+++ b/collage/public/index.html
@@ -67,6 +67,12 @@ When adding an image, choose a file, then remember to press the upload button to
 You can resize images by dragging at the corner or sides of an image.
 <br>
 <br>
+<strong>DOWNLOADING A SCREENSHOT</strong>
+<br>
+<br>
+To download, a screenshot, press the "Download Screenshot" button near the bottom, then press "Download" on the alert that pops up. The screenshot will be saved to your downloads folder.
+<br>
+<br>
 <strong>TIP FOR FINDING IMAGES WITH TRANSPARENT BACKGROUNDS</strong>
 <br>
 <br>
