how to for download screenshot

--- a/collage/public/index.html
+++ b/collage/public/index.html
@@ -85,6 +85,11 @@ It's nice to add images with a transparent background. You can google "{image yo
 Every week, on Sunday at 12am we do cleanup: a screenshot of the current state of the collage is saved, and all images are removed.
 <br>
 <br>
+<br>
+<a href="https://www.instagram.com/ndrewboylan/">Instagram</a>
+<br>
+<a href="https://www.linkedin.com/in/andrew-boylan-92842810a/">LinkedIn</a>
+<br>
     </div>
 
     <div id="bottomPadding"></div>
