get collage page rady

--- a/index.html
+++ b/index.html
@@ -28,12 +28,9 @@
     </a>
 
     <a href="/collage">
-      COLLAGE (IN PROGRESS)
+      COLLAGE
     </a>
 
-    <a href="/dummy_node">
-      DUMMY NODE
-    </a>
   </div>
 
   <div id="bottom">
