--- a/trash/index.html
+++ b/trash/index.html
@@ -3,6 +3,7 @@
 <head>
     <title>Trash Schedule</title>
     <link rel="stylesheet" href="index.css">
+    <meta charset="UTF-8">
 </head>
 <body>
     <div id="trashSchedule">
